# GraphicsEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  futurePlans.txt  main.cpp
apps/: CMakeLists.txt  modeler.cpp
apps/compute-shader-test/: imageFilter.h  main.cpp
apps/compute-shader-test/helpers/: shaderHelper.cpp  shaderHelper.h  textureHelper.cpp  textureHelper.h
apps/compute-shader-test/openGL/: openGL.cpp  openGL.h
apps/compute-shader-test/window/: window.cpp  window.h
apps/modeler/: modeler.cpp
apps/modeler/glad/: opengl.cpp  opengl.h
apps/modeler/glfw/: window.cpp  window.h
apps/modeler/imgui/: imgui.cpp  imgui.h
apps/modeler/imgui/Nodes/: helpers.cpp  helpers.h
apps/modeler/imgui/Nodes/Camera/: camera.cpp  camera.h
apps/modeler/imgui/Nodes/Entity/: entity.cpp  entity.h
apps/modeler/imgui/Nodes/Geometry/: geometry.cpp  geometry.h  geometryNode.cpp  geometryNode.h
apps/modeler/imgui/Nodes/Light/: light.cpp  light.h
apps/modeler/imgui/Nodes/Material/: material.cpp  material.h
apps/modeler/imgui/Nodes/OpenGLMaterial/: openGLMaterial.cpp  openGLMaterial.h
apps/modeler/imgui/Nodes/OpenGLShader/: openGLShader.cpp  openGLShader.h
apps/modeler/imgui/Nodes/Render/: render.cpp  render.h
apps/modeler/imgui/Nodes/Templates/: componentWindow.cpp  componentWindow.h  imguiWindow.cpp
apps/modeler/imgui/Nodes/Texture/: texture.cpp  texture.h
apps/modeler/imgui/Nodes/Transform/: transform.cpp  transform.h
apps/modeler/imgui/Util/: errorModal.cpp  errorModal.h  fileBrowser.cpp  fileBrowser.h  objectLoader.cpp  objectLoader.h
apps/modeler/imgui/Util/SceneLoading/: parsing.cpp  parsing.h  sceneLoader.cpp  sceneLoader.h  serialization.cpp  serialization.h
apps/modeler/imgui/Window/: helpers.h
apps/modeler/imgui/Window/Camera/: camera.cpp  camera.h
apps/modeler/imgui/Window/Entity/: entity.cpp  entity.h
apps/modeler/imgui/Window/FileBrowser/: fileBrowser.cpp  fileBrowser.h
apps/modeler/imgui/Window/Geometry/: geometryNode.cpp  geometryNode.h
apps/modeler/imgui/Window/Light/: light.cpp  light.h
apps/modeler/imgui/Window/Main/: mainViewPort.cpp  mainViewPort.h  postProcesser.cpp  postProcesser.h
apps/modeler/imgui/Window/OpenGLMaterial/: openGLMaterial.cpp  openGLMaterial.h  shaderWindow.cpp  shaderWindow.h
apps/modeler/imgui/Window/Raytracing/: raytracingWindow.cpp  raytracingWindow.h
apps/modeler/imgui/Window/Templates/: componentWindow.h  imguiWindow.cpp  imguiWindow.h
apps/modeler/imgui/Window/Transform/: transform.cpp  transform.h
data/icons/: sources.txt
data/shaders/Basic-Texture-Shader/: Basic-Texture-Shader.frag  Basic-Texture-Shader.vert
data/shaders/Basic_Shader/: Basic_Shader.frag  Basic_Shader.vert  base.frag  base.vert
data/shaders/Basic_Shading_Shader/: Basic_Shading_Shader.frag  Basic_Shading_Shader.vert  basic_shading.frag  basic_shading.vert
data/shaders/Gooch_Shading/: Gooch_Shading.frag  Gooch_Shading.vert
data/shaders/Minimal_Shader/: Minimal_Shader.frag  Minimal_Shader.vert  (+2 more)
data/textures/: sources.txt
src/: CMakeLists.txt
src/Core/Components/BoundingBox/: boundingBox.cpp  boundingBox.h
src/Core/Components/Camera/: camera.cpp  camera.h
src/Core/Components/Geometry/: geometry.cpp  geometry.h
src/Core/Components/Hierarchy/: hierarchy.cpp  hierarchy.h
src/Core/Components/Light/: light.cpp  light.h
src/Core/Components/Material/: material.cpp  material.h
src/Core/Components/Render/: render.cpp  render.h
src/Core/Components/Tag/: tag.cpp  tag.h
src/Core/Components/Transform/: transform.cpp  transform.h
src/Core/ECS/: componentTable.h  registry.h  util.h
src/Core/Math/: math.cpp  math.h  quaternion.cpp  quaternion.h  vector.h
src/Core/Systems/HierarchyTracker/: hierarchyTracker.cpp  hierarchyTracker.h
src/Core/Util/Raycaster/: raycaster.cpp  raycaster.h
src/OpenGL/Components/Camera/: activeCamera.cpp  activeCamera.h
src/OpenGL/Components/Material/: material.cpp  material.h
src/OpenGL/Components/OpenGLGeometry/: openGLGeometry.cpp  openGLGeometry.h
src/OpenGL/Components/OpenGLTransform/: openGLTransform.cpp  openGLTransform.h
src/OpenGL/Components/Render/: render.cpp  render.h
src/OpenGL/Components/Shader/: shader.cpp  shader.h
src/OpenGL/Components/Texture/: texture.cpp  texture.h
src/OpenGL/Framebuffer/: framebuffer.cpp  framebuffer.h
src/OpenGL/Renderer/: renderer.cpp  renderer.h
src/OpenGL/Shader/: shader.cpp  shader.h
src/OpenGL/Systems/CameraTracker/: cameraTracker.cpp  cameraTracker.h
src/OpenGL/Systems/GeometryTracker/: geometryTracker.cpp  geometryTracker.h
src/OpenGL/Systems/LightsTracker/: lightsTracker.cpp  lightsTracker.h
src/OpenGL/Systems/MaterialTracker/: materialTracker.cpp  materialTracker.h
src/OpenGL/Systems/RenderTracker/: renderTracker.cpp  renderTracker.h
src/OpenGL/Systems/RenderTracker/GeometryTracker/: geometryTracker.cpp  geometryTracker.h
src/OpenGL/Systems/RenderTracker/MaterialTracker/: materialTracker.cpp  materialTracker.h
src/OpenGL/Systems/RenderTracker/ShaderTracker/: shaderTracker.cpp  shaderTracker.h
src/OpenGL/Systems/RenderTracker/TextureTracker/: textureIndex.cpp  textureIndex.h  textureTracker.cpp  textureTracker.h
src/OpenGL/Systems/RenderTracker/TransformTracker/: transformTracker.cpp  transformTracker.h
src/OpenGL/Systems/ShaderTracker/: shaderTracker.cpp  shaderTracker.h
src/OpenGL/Systems/TransformTracker/: transformTracker.cpp  transformTracker.h
src/OpenGL/Util/: textureIndex.cpp  textureIndex.h  textureLoader.cpp  textureLoader.h
src/Raytracing/: raytracer.cpp  raytracer.h
src/Raytracing/Components/Hittable/: hittable.cpp  hittable.h
src/Raytracing/Components/Material/: raytracingMaterial.cpp  raytracingMaterial.h
src/Raytracing/Util/: hitrecord.cpp  hitrecord.h
src/Util/: fileHandling.cpp  fileHandling.h
tests/: CMakeLists.txt
tests/Core/Components/Geometry/: geometry.test.cpp
tests/Core/ECS/: componentTable.test.cpp  registry.test.cpp  util.test.cpp
tests/OpenGL/Components/Render/: render.test.cpp
tests/example/: example.test.cpp
(+4 files in other folders)
